# example-package-kendall_m

./: LICENSE  README.md  pyproject.toml
tests/: test_rescale.py
