[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-package-kendall_m"
dynamic = ["version"]
dependencies = [
  "numpy"
]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://kmongird.github.io/example-package-kendall_m"
"Source Code" = "https://github.com/kmongird/example-package-kendall_m"


[tool.hatch]
version.path = "src/example_package_kendall_m/__init__.py"